--- a/brain-fm.html
+++ b/brain-fm.html
@@ -1,1 +1,14 @@
-<!-- your work goes here -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Brain FM</title>
+    </head>
+    <body>
+        <div class="section-1">
+            <img src="./logo.png" />
+        </div>
+        <div class="section-2">
+
+        </div>
+    </body>
+</html>
