--- a/brain-fm.html
+++ b/brain-fm.html
@@ -1,14 +1,84 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!--First page ever built by yours truly. Took 13 hours, after slowly
+coding for a few weeks now. This is the beginning of many more to come.-->
 <html>
     <head>
         <title>Brain FM</title>
+        <link rel="stylesheet" type="text/css" href="./style.css" />
     </head>
     <body>
         <div class="section-1">
-            <img src="./logo.png" />
+            <div style="flex-grow: 80;">
+              <img src="./logo.png" style="width: 150px;" />
+            </div>
+            <div style="flex-grow: 1;">
+              <a href="" style="text-decoration:none">Sign In</a>
+            </div>
+            <div style="flex-grow: 19;">
+              <input type="button" value="Try for Free" style="font-weight: bold" />
+            </div>
+        </div>  
+
+        <div class="section-1" style= "justify-content: center;" >
+            <div style="flex: 0 1 600px;">
+                  <p id="text-1">Functional Music to Improve</p>
+                  <p id="text-2">Focus in 15 Minutes</p>
+                  <p id="text-3">Our science-first approach creates music that sounds different-and affects your brain-differently than any other music</p>
+                  <p id="text-4">FEATURED IN</p>
+                  <div style="padding: 0px 0px 30px 0px;">
+                    <img src="./clout.png" />
+                  </div>
+                  <div >
+                   <input type="button" value="Try 5 Free Sessions" />
+                  </div>
+            </div>      
+
+            <div style="flex: 0 1 400px;">
+                  <img src="./picture-1.gif" style="width: 825px;" />
+            </div>
+
+            </div>
+
+        <div class="section-1" style="padding: 0px;">
+            <div id="text-5">
+                <p>Wanna see the Science?</p>
+            </div>
         </div>
+        </div>    
+
         <div class="section-2">
+            <div>
+                <img src="picture-2.gif" style="padding: 0px 150px"/>
+                <img src="picture-3.png" style="margin: 0px 0px 51px 0px;" />
+            </div>
+            <div class="section-2">
+              <h2 id="text-6">Patented Technology</h2>
+                <p style="margin: 0 0 0 148px; padding-bottom: 20px;">Brain.fm holds patents on key processes for creating<br>
+                functional music, including technology to elicit <b>strong neural<br>
+                phase locking-</b>allowing populations of neurons to engage in<br>
+                various kinds of coordinated activity- and technology to<br>
+                remove distraction in sound</p>
+                <p style="margin: 0 0 0 148px; padding-bottom: 20px;">This makes our music unique, purpose-built to steer you into a<br>
+                desired mental state. In other words, we've found new ways to<br>
+                create music that helps you do what you need to do. </p>
+                <a href="" id="explore">Explore More of our Science</a>
+              <h2 id="text-7">Tested on Brain and Behavior</h2>
+                <p style="margin: 0 0 0 805px; padding-bottom: 20px;">Scientists at Brain.fm work with collaborators at academic<br>
+                institutions to run experiments.</p> 
+                <p style="margin: 0 0 0 805px; padding-bottom: 20px;">We look at the affects of our technology on the brain, using<br>
+                    fMRI and EEG, and also run large-scale behavorial tests,<br>
+                    measuring performance on simple games.</p>
+                <p style="margin: 0 0 0 805px; padding-bottom: 20px;"><b>Our experiments always include a control condition<br>
+                    ('placebo')</b> of the same underlying music without Brain.fm<br>
+                    technology applied so we can be sure our tech is what makes<br>
+                    the difference.
+
+                </p>
+              </div>
+            </div>
 
         </div>
+
+    </div>
+
     </body>
 </html>
