correcting image pathway

--- a/brain-fm.html
+++ b/brain-fm.html
@@ -8,7 +8,7 @@ coding for a few weeks now. This is the beginning of many more to come.-->
     <body>
         <div class="section-1">
             <div style="flex-grow: 80;">
-              <img src="./logo.png" style="width: 150px;" />
+              <img src="./images/logo.png" style="width: 150px;" />
             </div>
             <div style="flex-grow: 1;">
               <a href="" style="text-decoration:none">Sign In</a>
@@ -25,7 +25,7 @@ coding for a few weeks now. This is the beginning of many more to come.-->
                   <p id="text-3">Our science-first approach creates music that sounds different-and affects your brain-differently than any other music</p>
                   <p id="text-4">FEATURED IN</p>
                   <div style="padding: 0px 0px 30px 0px;">
-                    <img src="./clout.png" />
+                    <img src="./images/clout.png" />
                   </div>
                   <div >
                    <input type="button" value="Try 5 Free Sessions" />
@@ -33,7 +33,7 @@ coding for a few weeks now. This is the beginning of many more to come.-->
             </div>      
 
             <div style="flex: 0 1 400px;">
-                  <img src="./picture-1.gif" style="width: 825px;" />
+                  <img src="./images/picture-1.gif" style="width: 825px;" />
             </div>
 
             </div>
@@ -47,8 +47,8 @@ coding for a few weeks now. This is the beginning of many more to come.-->
 
         <div class="section-2">
             <div>
-                <img src="picture-2.gif" style="padding: 0px 150px"/>
-                <img src="picture-3.png" style="margin: 0px 0px 51px 0px;" />
+                <img src="./images/picture-2.gif" style="padding: 0px 150px"/>
+                <img src="./images/picture-3.png" style="margin: 0px 0px 51px 0px;" />
             </div>
             <div class="section-2">
               <h2 id="text-6">Patented Technology</h2>
