modified background color and resolved clout.png

--- a/brain-fm.html
+++ b/brain-fm.html
@@ -20,14 +20,16 @@ coding for a few weeks now. This is the beginning of many more to come.-->
 
         <div class="section-1" style= "justify-content: center;" >
             <div style="flex: 0 1 600px;">
+              <div>
                   <p id="text-1">Functional Music to Improve</p>
                   <p id="text-2">Focus in 15 Minutes</p>
                   <p id="text-3">Our science-first approach creates music that sounds different-and affects your brain-differently than any other music</p>
                   <p id="text-4">FEATURED IN</p>
+              </div>    
                   <div style="padding: 0px 0px 30px 0px;">
                     <img src="./images/clout.png" />
                   </div>
-                  <div >
+                  <div>
                    <input type="button" value="Try 5 Free Sessions" />
                   </div>
             </div>      
